# ecommerce_lakehousee

./: docker-compose.yml  main.py  pyproject.toml
airflow/dags/: ecom_daily_pipeline.py
ecom_transform/: .user.yml  dbt_project.yml  profiles.yml  warehouse.duckdb
ecom_transform/models/marts/: dim_customer_summary.sql  fct_revenue_daily.sql  fct_top_products.sql
ecom_transform/models/staging/: _sources.yml  _stg_tests.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  bronze_orders_suite.json
gx/validation_definitions/: bronze_orders_validation.json
scripts/: data_generator.py  extract.py  validate_bronze.py
